sistemo size e thickness footer

--- a/wp-content/themes/twentytwenty/style.css
+++ b/wp-content/themes/twentytwenty/style.css
@@ -4457,8 +4457,9 @@ a.to-the-top > * {
 }
 
 .footer-copyright {
-	font-weight: 600;
+	font-weight: 500;
 	margin: 0;
+	font-size: 12;
 }
 
 .powered-by-wordpress {
