--- a/wp-content/themes/twentytwenty/style.css
+++ b/wp-content/themes/twentytwenty/style.css
@@ -5525,8 +5525,7 @@ a.to-the-top > * {
 	}
 
 	.footer-copyright {
-		font-weight: 500
-		font-size: 12pt;
+		font-weight: 700;
 	}
 
 	.powered-by-wordpress {
